--- a/html/ui.html
+++ b/html/ui.html
@@ -11,17 +11,19 @@
             <img src="./img/radio.png" alt="" class="radio">
 
             <div class="channel">
-                <input id="channel" type="number" name="channel" min="1" max="500" placeholder="1-500">
+                <input id="channel-input" type="number" name="channel" min="1" max="500" placeholder="1-500">
             </div>
-            <div id="submit"></div>
-            <div id="disconnect"></div>
-            <div id="volumeDown"></div>
-            <div id="volumeUp"></div>
-            <div id="increaseradiochannel"></div>
-            <div id="decreaseradiochannel"></div>
-            <div id="poweredOff"></div>
+            <!-- <button id="connect" data-fn="connect"></button> -->
+            <button id="connect" data-fn="connect"></button>
+            <button id="disconnect" data-fn="disconnect"></button>
+            <button id="volume-up" data-fn="volumeUp"></button>
+            <button id="volume-down" data-fn="volumeDown"></button>
+            <button id="increase-channel" data-fn="channelUp"></button>
+            <button id="decrease-channel" data-fn="channelDown"></button>
+            <button id="power-off" data-fn="powerOff"></button>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="js/script.js" type="text/javascript"></script>
 </body>
 
